# jararaca

./: .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  EXPOSE_TYPE_IMPLEMENTATION.md  EXPOSE_TYPE_QUICKSTART.md  FEATURE_COMPLETE.md  Makefile  PYTEST_IMPLEMENTATION.md  README.md  REUSE.toml  TEST_SUITE_SUMMARY.md  index.html  mkdocs.yml  pyproject.toml  reuse.sh  test_enhanced_client.py  test_unit_tests.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.reuse/: dep5
Architecture/Message Bus/Decorators/: index.html
Architecture/Message Bus/Interceptors/: index.html
Architecture/Observability/Decorators/: index.html
Architecture/Observability/Interceptors/: index.html
Architecture/Presentation/Decorators/: index.html
Architecture/RPC/RestClients/Decorators/: index.html
Architecture/RPC/RestClients/Middlewared/: index.html
Architecture/Schedule/Decorators/: index.html
Architecture/Websocket/Decorators/: index.html
Architecture/Websocket/Interceptors/: index.html
Concept/Adapters/: index.html
Concept/Hexagonal Architecture/: index.html
Concept/Ports/: index.html
architecture/: index.html
configuration/: index.html
docs/: CNAME  architecture.md  configuration.md  example-app.md  expose-type.md  http-middleware.md  http-rpc.md  index.md  interceptors.md  messagebus.md  metadata.md  observability.md  persistence.md  retry.md  scheduler.md  testing.md  typescript-generation.md  websocket.md
example-app/: index.html
examples/: app.py  client.py  const_example.py  controller.py  expose_type_example.py  full_expose_example.py  typescript_inheritance_example.py
expose-type/: index.html
http-middleware/: index.html
http-rpc/: index.html
interceptors/: index.html
messagebus/: index.html
metadata/: index.html
observability/: index.html
persistence/: index.html
retry/: index.html
scheduler/: index.html
scripts/: test.sh
search/: search_index.json
src/jararaca/: __init__.py  __main__.py  cli.py  const.py  di.py  lifecycle.py  microservice.py
src/jararaca/broker_backend/: __init__.py  mapper.py  redis_broker_backend.py
src/jararaca/core/: providers.py  uow.py
src/jararaca/files/: entity.py.mako
src/jararaca/files/project_template/: README.md.tmpl  docker-compose.yml.tmpl  dot.env.example.tmpl  dot.gitignore.tmpl  pyproject.toml.tmpl
src/jararaca/files/project_template/dot.vscode/: launch.json.tmpl  settings.json.tmpl
src/jararaca/files/project_template/src/__PACKAGE_NAME__/: __init__.py.tmpl  app.py.tmpl
src/jararaca/files/project_template/src/__PACKAGE_NAME__/controllers/: health.py.tmpl  tasks.py.tmpl
src/jararaca/files/project_template/tests/: test_app.py.tmpl
src/jararaca/generic/: __init__.py
src/jararaca/helpers/global_scheduler/: config.py  controller.py  registry.py
src/jararaca/messagebus/: __init__.py  bus_message_controller.py  decorators.py  implicit_headers.py  message.py  publisher.py  types.py  worker.py  worker_v2.py
src/jararaca/messagebus/interceptors/: aiopika_publisher_interceptor.py  message_publisher_collector.py  publisher.py  publisher_interceptor.py
src/jararaca/observability/: constants.py  decorators.py  fastapi_exception_handler.py  hooks.py  interceptor.py
src/jararaca/observability/providers/: otel.py
src/jararaca/persistence/: base.py  exports.py  sort_filter.py  utilities.py
src/jararaca/persistence/interceptors/: aiosqa_interceptor.py  constants.py  decorators.py
src/jararaca/presentation/: decorators.py  exceptions.py  hooks.py  http_microservice.py  server.py
src/jararaca/presentation/websocket/: base_types.py  context.py  decorators.py  redis.py  types.py  websocket_interceptor.py
src/jararaca/reflect/: controller_inspect.py  decorators.py  helpers.py  metadata.py
src/jararaca/rpc/http/: __init__.py  decorators.py
src/jararaca/rpc/http/backends/: __init__.py  httpx.py  otel.py
src/jararaca/scheduler/: beat_worker.py  decorators.py  scheduler.py  scheduler_v2.py  types.py
src/jararaca/tools/: metadata.py
src/jararaca/tools/app_config/: decorators.py  interceptor.py
src/jararaca/tools/typescript/: decorators.py  interface_parser.py
src/jararaca/utils/: env_parse_utils.py  logger_extra_interceptor.py  rabbitmq_utils.py  retry.py
stylesheets/: custom.css
testing/: index.html
tests/: README.md  conftest.py  test_dependency_injection.py  test_expose_type.py  test_integration.py  test_messagebus.py  test_microservice.py  test_rest_controllers.py  test_typescript_decorators.py  test_typescript_generation.py
typescript-generation/: index.html
websocket/: index.html
