[tool.poetry]
name = "jararaca"
version = "0.1.30"
description = "A simple and fast API framework for Python"
authors = ["Lucas S <me@luscasleo.dev>"]
readme = "README.md"
packages = [{ include = "jararaca", from = "src" }]
include = ["pyproject.toml", "README.md", "LICENSE", "docs"]
repository = "https://github.com/LuscasLeo/jararaca"


[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
uvloop = "^0.20.0"
fastapi = "^0.113.0"
aio-pika = "^9.4.3"
sqlalchemy = "^2.0.34"
croniter = "^3.0.3"
redis = "^5.0.8"
websockets = "^13.0.1"
opentelemetry-exporter-otlp-proto-http = "^1.27.0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-distro = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
types-croniter = "^3.0.3.20240731"
types-redis = "^4.6.0.20240903"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
autoflake = "^2.3.1"
types-croniter = "^3.0.3.20240731"
types-redis = "^4.6.0.20240903"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.34"


[tool.poetry.group.dev.dependencies]
httptools = "^0.6.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
# mypy_path = "src"


# JARARACA CONFIG
[tool.poetry.scripts]
jararaca = "jararaca.cli:cli"
