[tool.poetry]
name = "jararaca"
version = "0.4.0a11"
description = "A simple and fast API framework for Python"
authors = ["Lucas S <me@luscasleo.dev>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{ include = "jararaca", from = "src" }]
include = ["pyproject.toml", "README.md", "LICENSE", "docs"]
repository = "https://github.com/LuscasLeo/jararaca"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]


[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
uvloop = "^0.20.0"
fastapi = "^0.124.4"
aio-pika = "^9.4.3"
sqlalchemy = "^2.0.34"
croniter = "^3.0.3"
redis = "^5.0.8"
websockets = "^13.0.1"
opentelemetry-exporter-otlp-proto-http = { version = "^1.27.0", optional = true }
opentelemetry-api = "^1.38.0"
opentelemetry-sdk = "^1.38.0"
opentelemetry-distro = "^0.59b0"
opentelemetry-exporter-otlp = { version = "^1.27.0", optional = true }
types-croniter = "^3.0.3.20240731"
types-redis = "^4.6.0.20240903"
mako = "^1.3.5"
watchdog = { version = "^3.0.0", optional = true }
frozendict = "^2.4.6"
urllib3 = "^2.3.0"


[tool.poetry.extras]
opentelemetry = [
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
]
http = ["httptools", "httpx"]
docs = ["mkdocs-material"]
watch = ["watchdog"]

[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
autoflake = "^2.3.1"
types-croniter = "^3.0.3.20240731"
types-redis = "^4.6.0.20240903"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.34"
mkdocs-mermaid2-plugin = "^1.2.1"


[tool.poetry.group.dev.dependencies]
httptools = "^0.6.1"
httpx = "^0.27.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
reuse = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
# mypy_path = "src"


# JARARACA CONFIG
[tool.poetry.scripts]
jararaca = "jararaca.cli:cli"

[[tool.mypy.overrides]]
module = "mako.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/jararaca"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
